--- a/emacs.org
+++ b/emacs.org
@@ -187,7 +187,7 @@ Do some housekeeping to measure start up time.  See [[https://nullprogram.com/bl
 <<license>>
 
 (message "Loading up Emacs...")
-(defvar forge-core-start-time (current-time))
+(defvar init-core-start-time (current-time))
 
 (defun init-report-startup-time ()
   "Report startup time."
@@ -269,7 +269,7 @@ Additional notes:
   is set correctly.
 
 #+begin_src emacs-lisp
-(defun forge/package-install (package)
+(defun my-package-install (package)
   "Install PACKAGE if not yet installed."
   (unless (fboundp 'package-installed-p)
     (package-initialize))
@@ -284,13 +284,13 @@ Additional notes:
 (defvar init-core-packages '(use-package diminish quelpa quelpa-use-package org org-contrib)
   "A list of core packages that will be automatically installed.")
 
-(defun forge/install-core-packages ()
+(defun init-install-core-packages ()
   "Install core packages to install for Emacs."
   (interactive)
   (dolist (package init-core-packages)
-    (progn (forge/package-install package))))
+    (progn (my-package-install package))))
 
-(forge/install-core-packages)
+(init-install-core-packages)
 
 ;; https://github.com/jwiegley/use-package
 (eval-when-compile
@@ -330,7 +330,7 @@ Use Quelpa to install packages from source repositories.
 Sometimes installing a new package will bork packages.  This will recompile the /.el/ files.
 
 #+begin_src emacs-lisp
-(defun forge/package-upgrade-packages ()
+(defun my-package-upgrade-packages ()
   "Upgrade all installed packages."
   (interactive)
   (save-window-excursion
@@ -342,7 +342,7 @@ Sometimes installing a new package will bork packages.  This will recompile the 
 
 ;; Via spacemacs/core/core-funcs.el
 ;; https://github.com/syl20bnr/spacemacs/blob/c7a103a772d808101d7635ec10f292ab9202d9ee/core/core-funcs.el
-(defun forge/recompile-elpa ()
+(defun my-recompile-elpa ()
   "Recompile packages in elpa directory.  Useful if you switch Emacs versions."
   (interactive)
   (byte-recompile-directory package-user-dir nil t))
@@ -352,7 +352,7 @@ Configure Emacs to use the above defined paths.  Also configure some basic
 behavior, and load =custom.el= file, used by /customize/.
 
 #+begin_src emacs-lisp
-(defun forge/clean-user-emacs-directory ()
+(defun init-clean-user-emacs-directory ()
   "Set appropriate paths to keep `user-emacs-directory' clean."
   (interactive)
   (with-no-warnings
@@ -369,12 +369,12 @@ behavior, and load =custom.el= file, used by /customize/.
           url-cache-directory (expand-file-name "url/cache/" forge-state-dir)
           url-configuration-directory (expand-file-name "url/configuration/" forge-state-dir))))
 
-(defun forge/initialize ()
+(defun my-initialize ()
   "Initialize paths and session for this Emacs instance."
   (dolist (dir (list forge-site-dir forge-personal-dir forge-state-dir forge-backup-dir forge-log-dir))
     (unless (file-directory-p dir)
       (make-directory dir t)))
-  (forge/clean-user-emacs-directory)
+  (init-clean-user-emacs-directory)
   ;; when native compilation is available ...
   (when (forge/native-comp-p)
     (setq native-comp-deferred-compilation nil
@@ -393,7 +393,7 @@ behavior, and load =custom.el= file, used by /customize/.
 (setq custom-file (expand-file-name "custom.el" forge-personal-dir))
 (when (file-exists-p custom-file)
   (load custom-file))
-(forge/initialize)
+(my-initialize)
 #+end_src
 
 Create a customization group for variables specific to this configuration.
@@ -587,7 +587,7 @@ end tell")
 ** Helper functions
 *** Feature related helpers
 #+begin_src emacs-lisp
-(defun forge/reload-emacs-configuration ()
+(defun my-reload-emacs-configuration ()
   "Reload emacs configuration."
   (interactive)
   (load-file (expand-file-name "init.el" user-emacs-directory)))
@@ -966,8 +966,9 @@ looks good.  It will also define a default theme to start with.
   :group 'forge)
 
 ;; https://github.com/hlissner/emacs-solaire-mode
-;; Needed by doom-themes
-(use-package solaire-mode)
+;; Encouraged by doom-themes
+(use-package solaire-mode
+  :disabled t)
 
 ;; https://github.com/hlissner/emacs-doom-themes
 (use-package doom-themes
@@ -2147,6 +2148,7 @@ Arguments are from the `jabber-alert-message-hooks' FROM, BUF, TEXT, and TITLE."
   (alert text :title title :id 'new-jabber-alert))
 
 (use-package jabber
+  :disabled t
   :preface
   (defun forge/jabber-start-or-switch ()
     "Connect to Jabber services"
