wrap more config into a separate function

--- a/emacs.org
+++ b/emacs.org
@@ -360,6 +360,12 @@ Configure Emacs to use the above defined paths.  Also configure some basic
 behavior, and load =custom.el= file, used by /customize/.
 
 #+begin_src emacs-lisp
+(defun init-mkdirs-user-emacs-directory ()
+  "Create emacs.d directories environment."
+  (dolist (dir (list forge-site-dir forge-personal-dir forge-state-dir forge-backup-dir forge-log-dir))
+    (unless (file-directory-p dir)
+      (make-directory dir t))))
+
 (defun init-clean-user-emacs-directory ()
   "Set appropriate paths to keep `user-emacs-directory' clean."
   (interactive)
@@ -381,9 +387,7 @@ behavior, and load =custom.el= file, used by /customize/.
 
 (defun my-initialize ()
   "Initialize paths and session for this Emacs instance."
-  (dolist (dir (list forge-site-dir forge-personal-dir forge-state-dir forge-backup-dir forge-log-dir))
-    (unless (file-directory-p dir)
-      (make-directory dir t)))
+  (init-mkdirs-user-emacs-directory)
   (init-clean-user-emacs-directory)
   ;; when native compilation is available ...
   (when (forge/native-comp-p)
