add docker group to ibuffer

--- a/emacs.org
+++ b/emacs.org
@@ -1592,6 +1592,10 @@ the window contents.
        (mode . emacs-lisp-mode))
       ("Dired" (mode . dired-mode))
       ("SSH"   (filename . "^/ssh:*"))
+      ("Docker"
+       (or
+        (mode . dockerfile-mode)
+        (mode . docker-compose-mode)))
       ("Magit"
        (or
         (mode . magit-status-mode)
